--- a/index.html
+++ b/index.html
@@ -158,6 +158,111 @@
   </section>
 
   <!-- ==========================================
+       PROBLEM (pain agitation)
+       ========================================== -->
+  <section class="problem" id="problem">
+    <div class="container">
+      <div class="problem__header reveal">
+        <p class="label label--muted">The Hard Truth</p>
+        <h2 class="heading-lg" style="margin-top:16px;">Is your business <em>invisible</em> online?</h2>
+      </div>
+      <div class="problem__grid">
+        <div class="problem-card reveal">
+          <div class="problem-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+              <circle cx="11" cy="11" r="8" />
+              <line x1="21" y1="21" x2="16.65" y2="16.65" />
+              <line x1="8" y1="11" x2="14" y2="11" />
+            </svg>
+          </div>
+          <h3 class="problem-card__title">Competitors Are Ranking — You're Not</h3>
+          <p class="problem-card__desc">Your competitors show up on Google when customers search. You don't. Every day,
+            potential customers are choosing them instead.</p>
+        </div>
+        <div class="problem-card reveal reveal-d1">
+          <div class="problem-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+              <rect x="2" y="3" width="20" height="14" rx="2" />
+              <line x1="8" y1="21" x2="16" y2="21" />
+              <line x1="12" y1="17" x2="12" y2="21" />
+              <line x1="7" y1="8" x2="17" y2="8" />
+              <line x1="7" y1="11" x2="13" y2="11" />
+            </svg>
+          </div>
+          <h3 class="problem-card__title">No Website or Outdated Design</h3>
+          <p class="problem-card__desc">You either have no website, or one that looks like it was built 10 years ago.
+            First impressions matter — and you're losing them.</p>
+        </div>
+        <div class="problem-card reveal reveal-d2">
+          <div class="problem-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+              <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z" />
+              <circle cx="12" cy="10" r="3" />
+            </svg>
+          </div>
+          <h3 class="problem-card__title">Customers Can't Find You</h3>
+          <p class="problem-card__desc">Your address, phone number, timings — none of it shows up when people search.
+            They find your competitor's listing instead.</p>
+        </div>
+        <div class="problem-card reveal reveal-d3">
+          <div class="problem-card__icon">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+              <line x1="12" y1="1" x2="12" y2="23" />
+              <path d="M17 5H9.5a3.5 3.5 0 000 7h5a3.5 3.5 0 010 7H6" />
+            </svg>
+          </div>
+          <h3 class="problem-card__title">Wasting Money on Bad Marketing</h3>
+          <p class="problem-card__desc">You've spent on ads and agencies with no results. No tracking, no strategy, no
+            return — just bills and frustration.</p>
+        </div>
+      </div>
+      <div class="problem__closing reveal">
+        <p class="problem__closing-text">You're losing customers every day you stay invisible. <strong>Let's fix
+            that.</strong></p>
+        <a href="#consultation" class="btn btn--primary btn--large btn--arrow">Get a Free Audit</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- ==========================================
+       RESULTS (social proof with metrics)
+       ========================================== -->
+  <section class="results" id="results">
+    <div class="container">
+      <div class="results__header reveal">
+        <p class="label label--light">Proven Results</p>
+        <h2 class="heading-lg" style="color:#fff; margin-top:16px;">What happens when you <em>work with me</em></h2>
+      </div>
+      <div class="results__grid">
+        <div class="result-card reveal">
+          <span class="result-card__number">3×</span>
+          <h3 class="result-card__title">More Calls from Google</h3>
+          <p class="result-card__desc">Businesses I work with see a significant increase in calls and enquiries from
+            Google within the first few months.</p>
+        </div>
+        <div class="result-card reveal reveal-d1">
+          <span class="result-card__number">60<span class="result-card__unit">days</span></span>
+          <h3 class="result-card__title">First Page Ranking</h3>
+          <p class="result-card__desc">Most local businesses I work with reach Google's first page for their key search
+            terms within 60 days.</p>
+        </div>
+        <div class="result-card reveal reveal-d2">
+          <span class="result-card__number">2<span class="result-card__unit">weeks</span></span>
+          <h3 class="result-card__title">Professional Website Live</h3>
+          <p class="result-card__desc">From discovery call to a fully live, professional website — built to convert
+            visitors into paying customers.</p>
+        </div>
+        <div class="result-card reveal reveal-d3">
+          <span class="result-card__number">₹0</span>
+          <h3 class="result-card__title">Wasted on Bad Marketing</h3>
+          <p class="result-card__desc">Every rupee is tracked and accounted for. Data-driven strategy means zero waste
+            and maximum ROI.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ==========================================
        AUTHORITY / AWARDS (dark grid)
        ========================================== -->
   <section class="authority" id="authority">
@@ -301,45 +406,127 @@
   </section>
 
   <!-- ==========================================
+       AI ADVANTAGE (differentiator)
+       ========================================== -->
+  <section class="ai-advantage" id="ai-advantage">
+    <div class="container">
+      <div class="ai-advantage__grid">
+        <div class="ai-advantage__visual reveal">
+          <div class="ai-advantage__graphic">
+            <div class="ai-advantage__ring ai-advantage__ring--1"></div>
+            <div class="ai-advantage__ring ai-advantage__ring--2"></div>
+            <div class="ai-advantage__ring ai-advantage__ring--3"></div>
+            <div class="ai-advantage__core">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                <path d="M12 2a4 4 0 014 4c0 1.95-2 4-2 6h-4c0-2-2-4.05-2-6a4 4 0 014-4z" />
+                <line x1="10" y1="14" x2="14" y2="14" />
+                <line x1="10" y1="17" x2="14" y2="17" />
+                <line x1="11" y1="20" x2="13" y2="20" />
+              </svg>
+            </div>
+          </div>
+        </div>
+        <div class="ai-advantage__content reveal">
+          <p class="label label--muted">Why I'm Different</p>
+          <h2 class="heading-lg" style="margin-top:16px;">The AI advantage your <em>competitors</em> don't have</h2>
+          <div class="ai-advantage__points">
+            <div class="ai-advantage__point">
+              <div class="ai-advantage__point-icon">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" />
+                </svg>
+              </div>
+              <div>
+                <h3>Build Faster, Smarter, Cheaper</h3>
+                <p>I use AI to build your digital presence in half the time and at a fraction of the cost of traditional
+                  agencies — without cutting corners.</p>
+              </div>
+            </div>
+            <div class="ai-advantage__point">
+              <div class="ai-advantage__point-icon">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M17 21v-2a4 4 0 00-4-4H5a4 4 0 00-4 4v2" />
+                  <circle cx="9" cy="7" r="4" />
+                  <path d="M23 21v-2a4 4 0 00-3-3.87" />
+                  <path d="M16 3.13a4 4 0 010 7.75" />
+                </svg>
+              </div>
+              <div>
+                <h3>Automated Customer Follow-ups</h3>
+                <p>Never miss a lead again. AI-powered chatbots and automated appointment booking work for you 24/7,
+                  even when you're sleeping.</p>
+              </div>
+            </div>
+            <div class="ai-advantage__point">
+              <div class="ai-advantage__point-icon">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M21.21 15.89A10 10 0 118 2.83" />
+                  <path d="M22 12A10 10 0 0012 2v10z" />
+                </svg>
+              </div>
+              <div>
+                <h3>Data-Driven, Not Guesswork</h3>
+                <p>Every decision is backed by data. AI analytics tell us exactly what's working and what needs
+                  improvement — so your money is never wasted.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ==========================================
        PROCESS (timeline with milestone line)
        ========================================== -->
   <section class="process" id="process">
     <div class="container">
-      <div class="process__header reveal">
-        <h2 class="heading-lg">My <em>results-driven</em> Growth Process</h2>
-      </div>
-      <div class="process__layout">
-        <div class="process__left">
-          <div class="process__number">01.</div>
-          <div class="process__number">02.</div>
-          <div class="process__number">03.</div>
-          <div class="process__number">04.</div>
+      <div class="process__grid">
+        <!-- LEFT: Sticky heading + rolling number counter (cols 1-5) -->
+        <div class="process__left" id="processLeft">
+          <h2 class="heading-lg process__heading">My <em>results-driven</em> Growth Process</h2>
+          <div class="process__counter">
+            <span class="process__counter-zero">0</span>
+            <div class="process__counter-roller">
+              <div class="process__counter-digits" id="counterDigits">
+                <span>1.</span><span>2.</span><span>3.</span><span>4.</span>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="process__milestone" id="processMilestone">
-          <div class="process__milestone-fill" id="milestoneFill"></div>
-          <div class="process__milestone-dot" style="top: 5%;"></div>
-          <div class="process__milestone-dot" style="top: 30%;"></div>
-          <div class="process__milestone-dot" style="top: 57%;"></div>
-          <div class="process__milestone-dot" style="top: 82%;"></div>
+
+        <!-- CENTER: Milestone line (col 6) -->
+        <div class="process__milestone-col" id="processMilestone">
+          <div class="milestone-container">
+            <div class="milestone-line" id="milestoneLine">
+              <div class="milestone-progress" id="milestoneProgress"></div>
+            </div>
+            <div class="milestone-marker" data-dot="0"></div>
+            <div class="milestone-marker" data-dot="1"></div>
+            <div class="milestone-marker" data-dot="2"></div>
+            <div class="milestone-marker" data-dot="3"></div>
+          </div>
         </div>
+
+        <!-- RIGHT: Step content (cols 7-12) -->
         <div class="process__right">
-          <div class="process__step reveal">
+          <div class="process__step is-active" data-step="0">
             <h3 class="process__step-title">Discovery</h3>
             <p class="process__step-desc">I start by understanding your business, goals, and target audience. I focus on
               identifying the key problem we're solving and your unique strengths — creating a solid foundation for
               growth.</p>
           </div>
-          <div class="process__step reveal">
+          <div class="process__step" data-step="1">
             <h3 class="process__step-title">Research</h3>
             <p class="process__step-desc">I analyse your competitors, market positioning, and online landscape. This
               research helps us understand where opportunities exist and how to position your business effectively.</p>
           </div>
-          <div class="process__step reveal">
+          <div class="process__step" data-step="2">
             <h3 class="process__step-title">Build & Launch</h3>
             <p class="process__step-desc">I build your complete digital presence — website, Google listing, social
               profiles. Everything is designed to attract your ideal customers and convert visitors into enquiries.</p>
           </div>
-          <div class="process__step reveal">
+          <div class="process__step" data-step="3">
             <h3 class="process__step-title">Grow & Optimise</h3>
             <p class="process__step-desc">After launch, I continually monitor performance, optimise for better results,
               and implement AI-powered tools to automate and scale your digital growth.</p>
@@ -416,6 +603,61 @@
             <span class="project-tag">Google Maps</span>
             <span class="project-tag">Food & Beverage</span>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ==========================================
+       ABOUT (personal trust)
+       ========================================== -->
+  <section class="about" id="about">
+    <div class="container">
+      <div class="about__grid">
+        <div class="about__photo-area reveal">
+          <div class="about__photo-placeholder">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+              <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2" />
+              <circle cx="12" cy="7" r="4" />
+            </svg>
+            Your Photo
+          </div>
+        </div>
+        <div class="about__content reveal">
+          <p class="label label--muted">About</p>
+          <h2 class="heading-lg" style="margin-top:16px;">Meet your <em>growth partner</em></h2>
+          <p class="about__bio">I'm Harshal — a digital growth consultant based right here in Chandrapur. I help local
+            businesses build a real online presence using modern AI-powered tools that most agencies don't even know
+            about.</p>
+          <p class="about__bio">I'm not a giant agency with overhead costs and cookie-cutter solutions. I'm one person
+            who genuinely cares about seeing your business grow. When you work with me, you work directly with me — no
+            middlemen, no miscommunication.</p>
+          <div class="about__tags">
+            <div class="about__tag">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z" />
+                <circle cx="12" cy="10" r="3" />
+              </svg>
+              Based in Chandrapur
+            </div>
+            <div class="about__tag">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M12 2a4 4 0 014 4c0 1.95-2 4-2 6h-4c0-2-2-4.05-2-6a4 4 0 014-4z" />
+                <line x1="10" y1="14" x2="14" y2="14" />
+                <line x1="10" y1="17" x2="14" y2="17" />
+                <line x1="11" y1="20" x2="13" y2="20" />
+              </svg>
+              AI-Powered Approach
+            </div>
+            <div class="about__tag">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="22 12 18 12 15 21 9 3 6 12 2 12" />
+              </svg>
+              100% Results-Focused
+            </div>
+          </div>
+          <a href="#consultation" class="btn btn--primary btn--arrow" style="margin-top:36px;">Let's Talk About Your
+            Business</a>
         </div>
       </div>
     </div>
